# thread_placement

./: .gitignore  .main.cpp.swp  CMakeLists.txt  aditya_benchmark.txt  automate.sh  cha_helper.cpp  cha_helper.h  constants.h  cpu_helper.cpp  cpu_helper.h  imc_helper.cpp  imc_helper.h  intel_helper.cpp  intel_helper.h  logger_helper.cpp  logger_helper.h  main.cpp  math_helper.cpp  math_helper.h  os_helper.cpp  os_helper.h  pci_helper.cpp  pci_helper.h  string_helper.cpp  string_helper.h  thft_cha_topo.txt  thft_core_topo.txt  thread_helper.cpp  thread_helper.h
log_backup/: log.txt
